2021-03-23 Karl Berry <karl@tug.org>
    * TL'21.

2021-03-12 Luigi Scarso <luigi.scarso@gmail.com>
    * When restricted system commands is enabled  os.setenv has no effect
    * Patched  Decompress to avoid execution of arbitrary commands

2021-03-07 Luigi Scarso <luigi.scarso@gmail.com>
    * Fixed inclusion of  PDF images with page /Metadata streams (M.F. Krüger)

2021-02-14 Luigi Scarso <luigi.scarso@gmail.com>
    * callback for nesting level used in tracingmacros

2021-02-01 Luigi Scarso <luigi.scarso@gmail.com>
    * two TeX January 2021 DEK buglet fixes (H.Hagen)

2021-01-31 Luigi Scarso <luigi.scarso@gmail.com>
    * mark math glyphs as protected (in order to prevent processing
      as text in base mode) (H.Hagen)
    * removed width/ic compensation for traditional math code path
      (see [Dev-luatex] Duplicated italic correction in do_delimiter ) (H.Hagen)

2021-01-30 Luigi Scarso <luigi.scarso@gmail.com>
    * level_max and level_chr determing what gets put in front of
      macro tracing lines (variant on suggestion by PO on implementors list)(H. Hagen)

2021-01-13 Luigi Scarso <luigi.scarso@gmail.com>
    * pdftex compatibility hack (H. Hagen)

2020-12-13 Luigi Scarso <luigi.scarso@gmail.com>
    * fixed Hyphenation issue regarding frozen glyph nodes (M.F. Krüger)

2020-12-12 Luigi Scarso <luigi.scarso@gmail.com>
    * fixed  luatex segfault with huge romannumeral overfull (H. Hagen)
    * automake (GNU automake) 1.16.3

2020-11-08 Luigi Scarso <luigi.scarso@gmail.com>
    * convert assert(is_simple_character(wordstart)) to tex error

2020-10-30 Luigi Scarso <luigi.scarso@gmail.com>
    * fixed a typo in w32 code in errors.c (A. Kakuto)

2020-10-04 Luigi Scarso <luigi.scarso@gmail.com>
    * fixed a typo in ChangeLog (thanks to A. Kakuto)

2020-10-04 Luigi Scarso <luigi.scarso@gmail.com>
    * patch for openin_any = p (A. Kakuto)

2020-10-04 Luigi Scarso <luigi.scarso@gmail.com>
    * Lua 5.3.6

2020-08-21 Luigi Scarso <luigi.scarso@gmail.com>